examples/gce/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    rdns.rancher.io/protocol: 'http'
spec:
  rules:
  - http:
      paths:
      - path: /xxx
        backend:
          serviceName: http-svc
          servicePort: 80
      - path: /echo
        backend:
          serviceName: http-svc
          servicePort: 80
